# geopm

./: .clang-format  .gitignore  Makefile.am  README.md  configure.ac  setup.cfg
.github/workflows/: build.yml  build_libs.yml
.github/workflows/rpmbuild_container/: Dockerfile  package_component.sh
copying_headers/: MANIFEST.EXEMPT
docs/: geopm-docs.spec.in
examples/endpoint/: README.rst  app_properties.yaml  balance_client.py  balance_server.py  bench1.conf  bench2.conf  endpoint.py  launch_bt.b.sh  launch_bt.c.sh  launch_bt.d.sh  launch_cg.d.sh  launch_ep.d.sh  launch_ft.d.sh  launch_geopmbench_endpoint.sh  launch_is.c.sh  launch_is.d.sh  launch_is.e.sh  launch_lammps_endpoint.sh  launch_lu.d.sh  launch_mg.d.sh  launch_mg.e.sh  launch_minife_endpoint.sh  launch_nassp_endpoint.sh  launch_sp.c.sh  launch_sp.d.sh  minimize_app_budget.py  plot_cluster_policies.py  plot_perf.py  plot_power.py  plot_server.py  plot_times.py  summarize_endpoint_model.py  summarize_endpoint_perf.py  summarize_endpoint_tracking.py
examples/monitor_pairs/: monitor.py
geopmpy/: .gitignore  geopmrt.sh
geopmpy/geopmpy/: schema.sql
integration/apps/: apps.py
integration/apps/arithmetic_intensity/: arithmetic_intensity.py  build.sh
integration/apps/lammps/: .gitignore  0001-add-GEOPM.patch  Makefile.mk  README.md  build.sh  lammps.py
integration/apps/minife/: minife.py
integration/apps/nasbt/: 0001-Add-geopm-markup-to-build-NPB-BT.patch  nasbt.py
integration/apps/nasbtmz/: 0001-Add-GEOPM-epoch-markup.patch  nasbtmz.py
integration/apps/nascg/: 0001-Add-GEOPM-epoch-markup.patch  nascg.py
integration/apps/nasep/: 0001-Add-geopm-markup-to-build-NPB-EP.patch  nasep.py
integration/apps/nasft2/: 0001-Add-geopm-markup-to-build-NPB-FT.patch  nasft2.py
integration/apps/nasis/: 0001-Add-geopm-markup-to-build-intsort.patch  build.sh  nasis.py
integration/apps/naslu/: 0001-Add-GEOPM-epoch-markup.patch  naslu.py
integration/apps/naslumz/: 0001-Add-GEOPM-epoch-markup.patch  naslumz.py
integration/apps/nasmg/: 0001-Add-geopm-markup-to-build-NPB-MG.patch  nasmg.py
integration/apps/nassp/: nassp.py
integration/apps/nasspmz/: 0001-Add-GEOPM-epoch-markup.patch  nasspmz.py
integration/config/: gollum_env.sh
integration/experiment/: launch_util.py
integration/experiment/monitor/: run_monitor_lammps.py  run_monitor_nasbt.py  run_monitor_nasmg.py  run_monitor_nasspmz.py
integration/experiment/power_sweep/: gen_plot_power_performance_curves.py
integration/experiment/sst_evaluation/: Makefile.mk  gen_plot_time.py  run_sst_evaluation_arithmetic_intensity.py  run_sst_evaluation_nas_bt.py  sst_evaluation.py
integration/test/: Makefile.mk  test_examples.py  test_frequency_balancer.py  test_isst.py  test_multi_app.py  test_multi_app.sh
libgeopm/: .gitignore  Makefile.am  autogen.sh  configure.ac
libgeopmd/: Makefile.am  README.md  configure.ac  meson.build  meson_options.txt
libgeopmd/contrib/: meson.build
libgeopmd/include/: geopm_error.h  geopm_field.h  geopm_hash.h  geopm_hint.h  geopm_pio.h  geopm_sched.h  geopm_shmem.h  geopm_time.h  geopm_topo.h  geopm_version.h  meson.build
libgeopmd/include/geopm/: Agg.hpp  CircularBuffer.hpp  Cpuid.hpp  Exception.hpp  Helper.hpp  IOGroup.hpp  MSRIOGroup.hpp  PlatformIO.hpp  PlatformTopo.hpp  PluginFactory.hpp  ServiceProxy.hpp  SharedMemory.hpp  SharedMemoryScopedLock.hpp
libgeopmd/src/: geopm_version.c  json_data  meson.build
libgeopmd/test/: MSRIOGroupTest.cpp  POSIXSignalTest.cpp  meson.build
scripts/geopmpy/: __init__.py  endpoint.py  launcher.py
scripts/test/: TestAgent.py
service/: .gitignore  Makefile.am  configure.ac  geopm-service.spec.in  requirements.txt
service/debian/: control
service/docs/: Makefile.mk
service/geopmdpy/: service.py
service/geopmdpy_test/: Makefile.mk  geopmdpy.test  run_geopmdpy_tests.py
service/integration/: Makefile.mk
service/src/: Agg.cpp  BatchClient.cpp  BatchClient.hpp  BatchIO.cpp  BatchIO.hpp  BatchServer.cpp  BatchServer.hpp  BatchStatus.cpp  BatchStatus.hpp  CNLIOGroup.cpp  CNLIOGroup.hpp  CombinedControl.cpp  CombinedControl.hpp  CombinedSignal.cpp  ConstConfigIOGroup.cpp  ConstConfigIOGroup.hpp  CpuinfoIOGroup.cpp  CpuinfoIOGroup.hpp  DCGMDevicePool.cpp  DCGMDevicePoolImp.hpp  DCGMDevicePoolThrow.cpp  DCGMIOGroup.cpp  DCGMIOGroup.hpp  DerivativeSignal.cpp  DerivativeSignal.hpp  DifferenceSignal.cpp  DifferenceSignal.hpp  DomainControl.cpp  DomainControl.hpp  Exception.cpp  GEOPMHint.cpp  GPUTopoNull.hpp  GRPCServiceProxy.cpp  Helper.cpp  IOGroup.cpp  IOUring.cpp  IOUring.hpp  IOUringFallback.cpp  IOUringFallback.hpp  IOUringImp.cpp  (+80 more)
service/test/: BatchIOTest.cpp  MSRIOGroupTest.cpp  MSRIOTest.cpp  Makefile.mk  MockIOUring.hpp  MockPlatformTopo.cpp  MockPlatformTopo.hpp  PlatformTopoTest.cpp  geopm_test.cpp
shell_completion/: Makefile.mk
src/: Accumulator.cpp  Accumulator.hpp  Admin.cpp  Admin.hpp  Agent.cpp  Agent.hpp  All2allModelRegion.cpp  All2allModelRegion.hpp  ApplicationIO.cpp  ApplicationIO.hpp  ApplicationRecordLog.cpp  ApplicationRecordLog.hpp  ApplicationSampler.cpp  ApplicationSampler.hpp  ApplicationSamplerImp.hpp  ApplicationStatus.cpp  ApplicationStatus.hpp  BarrierModelRegion.cpp  BarrierModelRegion.hpp  CPUActivityAgent.cpp  CPUActivityAgent.hpp  CSV.cpp  CSV.hpp  ClosMapAgent.cpp  ClosMapAgent.hpp  Comm.cpp  Comm.hpp  ControlMessage.cpp  ControlMessage.hpp  Controller.cpp  Controller.hpp  DGEMMModelRegion.cpp  DGEMMModelRegion.hpp  Daemon.cpp  Daemon.hpp  DaemonImp.hpp  DebugIOGroup.cpp  DebugIOGroup.hpp  DefaultProfile.cpp  ELF.cpp  (+123 more)
src/geopmtools/: __init__.py  configuration.py  tracer.py
test/: FrequencyBalancerAgentTest.cpp  FrequencyTimeBalancerTest.cpp  Makefile.mk  MockFrequencyTimeBalancer.hpp  MockSSTClosGovernor.hpp  MockSSTIO.hpp  SSTClosGovernorTest.cpp  SSTFrequencyLimitDetectorTest.cpp  SSTIOGroupTest.cpp  SSTSignalTest.cpp  TRLFrequencyLimitDetectorTest.cpp
tutorial/python_agents/: README.md  base_agent.py  ml_agent.py  process_cpu_frequency_sweep.py  process_gpu_frequency_sweep.py  train_cpu_model.py  train_gpu_model.py
(+10 files in other folders)
