[metadata]
name = geopmtools
version = attr: geopmtools.__version__
author = Daniel Wilson
description = Tools built on top of GEOPM
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
dependency_links = git+
# 
install_requires =
    geopmdpy
    prompt_toolkit
    colorama
    pygments>=2.12.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    geopmtrace = geopmtools.tracer:main
