install_headers(
    'geopm/Agg.hpp',
    'geopm/CircularBuffer.hpp',
    'geopm/Cpuid.hpp',
    'geopm/Exception.hpp',
    'geopm/Helper.hpp',
    'geopm/IOGroup.hpp',
    'geopm/MSRIOGroup.hpp',
    'geopm/PlatformIO.hpp',
    'geopm/PlatformTopo.hpp',
    'geopm/PluginFactory.hpp',
    'geopm/ServiceProxy.hpp',
    'geopm/SharedMemory.hpp',
    'geopm/SharedMemoryScopedLock.hpp',
    'geopm/json11.hpp',
    'geopm_debug.hpp',
    'geopm_error.h',
    'geopm_field.h',
    'geopm_hash.h',
    'geopm_hint.h',
    'geopm_pio.h',
    'geopm_plugin.hpp',
    'geopm_sched.h',
    'geopm_shmem.h',
    'geopm_time.h',
    'geopm_topo.h',
    'geopm_version.h',
)
